frontend/config/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/lancewells/loot-loadout/frontend:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
